--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: "Lato", "sans-serif";
     color: white;
+    text-decoration: none;
 }
 
 /* Blocchi */
@@ -13,7 +14,7 @@
     height: 100vh;
     background-color: black;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
 }
 
@@ -42,4 +43,89 @@
     bottom: 2%;
     left: 0;
     background-color: gray;
+}
+
+/* Nav */
+#main-nav{
+    background-color: gray;
+    width: 100%;
+    height: 100px;
+    padding-left:20px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; 
+}
+
+#main-nav ul{ 
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.fa-microphone::after{
+    border-style: solid;
+    border-width: 0 0 0.15em 0.15em;
+    content: '';
+    display: inline-block;
+    height: 0.45em;
+    left: 0.15em;
+    top: 0.15em;
+    vertical-align: top;
+    width: 0.45em;
+    transform: rotate(135deg);
+    margin: 30px 20px 0;
+    font-size: 20px;
+}
+
+.fa-video::after{
+    border-style: solid;
+    border-width: 0 0 0.15em 0.15em;
+    content: '';
+    display: inline-block;
+    height: 0.45em;
+    left: 0.15em;
+    top: 0.15em;
+    vertical-align: top;
+    width: 0.45em;
+    transform: rotate(135deg);
+    margin: 30px 20px 0;
+    font-size: 20px;
+}
+
+.fa-share-from-square::after{
+    border-style: solid;
+    border-width: 0 0 0.15em 0.15em;
+    content: '';
+    display: inline-block;
+    height: 0.45em;
+    left: 0.15em;
+    top: 0.15em;
+    vertical-align: top;
+    width: 0.45em;
+    transform: rotate(135deg);
+    margin: 30px 20px 0;
+    font-size: 20px;
+}
+
+ul div{
+    text-align: left;
+}
+
+#main-nav a{
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+#end-meeting{
+    color: red;
+    background-color: lightgray;
+    height: 100px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
