--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,13 @@
     background-color: black;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
 }
 
 /* Users */
 #users{
     overflow-y: auto;
     width: 100%;
+    height: 90%;
     padding: 80px 40px;
     flex-shrink: 0;
     display: flex;
@@ -51,7 +51,7 @@
 #main-nav{
     background-color: gray;
     width: 100%;
-    height: 100px;
+    height: 10%;
     padding-left:20px;
     text-align: center;
     display: flex;
@@ -124,8 +124,9 @@ ul div{
 
 #end-meeting{
     color: red;
+    font-weight: bold;
     background-color: lightgray;
-    height: 100px;
+    height: 100%;
     padding: 20px;
     display: flex;
     justify-content: center;
